reorganização do portfólio - novas pastas e estrutura limpa

--- a/snapdl/index.html
+++ b/snapdl/index.html
@@ -6,8 +6,9 @@
     <link rel="shortcut icon" href="../icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vxncius - All Projects</title>
+    <title>Vxncius - SnapDL</title>
 </head>
+
 <body>
     <h1>
         <pre>
@@ -31,6 +32,7 @@
         </ul>
     </nav>
 
-    <h2><a href="../">‹ all projects</a></h2>
+    <h2><a href="../">‹ snapdl</a></h2>
 </body>
+
 </html>
