--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
   █  █ █   ▀▄ █  █ █ ▀███▀   ▐ █▄ ▄█           
    █▐   ▀     █   ██            ▀▀▀            
    ▐                                          
-  </pre>
+        </pre>
     </h1>
 
     <nav>
         <ul>
-            <li><a href="https://github.com/vxncius-dev" target="_blank">github</a></li>
-            <li><a href="curriculum.pdf" target="_blank">curriculum</a></li>
-            <li><a href="https://www.tiktok.com/@vxncius_" target="_blank">tiktok</a></li>
-            <li><a href="https://codepen.io/vxncius" target="_blank">codepen</a></li>
-            <li><a href="all-projects/index.html">all projects</a></li>
+            <li><a href="https://github.com/vxncius-dev" target="_blank">› github</a></li>
+            <li><a href="curriculum.pdf" target="_blank">› curriculum</a></li>
+            <li><a href="https://www.tiktok.com/@vxncius_" target="_blank">› tiktok</a></li>
+            <li><a href="https://codepen.io/vxncius" target="_blank">› codepen</a></li>
+            <li><a href="/all-projects/">› all projects</a></li>
         </ul>
     </nav>
 
@@ -36,35 +36,35 @@
     <section>
         <article>
             <h3>
-                <a href="article.html">article</a>
+                <a href="/article/">› article</a>
             </h3>
             <p>this tool helps you generate academic articles automatically using templates and ai assistance.</p>
         </article>
 
         <article>
             <h3>
-                <a href="snapdl.html">snapdl</a>
+                <a href="/snapdl/">› snapdl</a>
             </h3>
             <p>a fast and lightweight downloader that supports multiple formats and platforms. fully open source.</p>
         </article>
 
         <article>
             <h3>
-                <a href="skimmo.html">skimmo</a>
+                <a href="/skimmo/">› skimmo</a>
             </h3>
             <p>an efficient mobile framework that compiles small-footprint android apps quickly and reliably.</p>
         </article>
 
         <article>
             <h3>
-                <a href="stocklist.html">stocklist</a>
+                <a href="/stocklist/">› stocklist</a>
             </h3>
             <p>track your expenses and grocery items in one smart app with notifications and sharing support.</p>
         </article>
 
         <article>
             <h3>
-                <a href="playcine.html">playcine</a>
+                <a href="/playcine/">› playcine</a>
             </h3>
             <p>stream live tv and access a wide variety of channels anytime, anywhere with low latency.</p>
         </article>
