--- a/article/index.html
+++ b/article/index.html
@@ -9,30 +9,37 @@
     <title>Vxncius - Article</title>
 </head>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GDX543KKBB"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-GDX543KKBB');
+</script>
+
 <body>
     <h1>
-        <pre>
-    ▄      ▄     ▄   ▄█▄    ▄█   ▄      ▄▄▄▄▄  
-     █ ▀▄   █     █  █▀ ▀▄  ██    █    █     ▀▄
-█     █  █ ▀  ██   █ █   ▀  ██ █   █ ▄  ▀▀▀▀▄  
- █    █ ▄ █   █ █  █ █▄  ▄▀ ▐█ █   █  ▀▄▄▄▄▀   
-  █  █ █   ▀▄ █  █ █ ▀███▀   ▐ █▄ ▄█           
-   █▐   ▀     █   ██            ▀▀▀            
-   ▐                                          
-        </pre>
+        <img src="../assets/logo.png" alt="Vxncius" width="220">
     </h1>
 
     <nav>
         <ul>
-            <li><a href="https://github.com/vxncius-dev" target="_blank">github</a></li>
-            <li><a href="curriculum.pdf" target="_blank">curriculum</a></li>
-            <li><a href="https://www.tiktok.com/@vxncius_" target="_blank">tiktok</a></li>
-            <li><a href="https://codepen.io/vxncius" target="_blank">codepen</a></li>
-            <li><a href="/all-projects/">all projects</a></li>
+            <li><a href="https://github.com/vxncius-dev" target="_blank">› github</a></li>
+            <li><a href="assets/curriculum.pdf" target="_blank">› curriculum</a></li>
+            <li><a href="https://www.tiktok.com/@vxncius_" target="_blank">› tiktok</a></li>
+            <li><a href="https://codepen.io/vxncius" target="_blank">› codepen</a></li>
+            <li><a href="/all-projects/">› all projects</a></li>
         </ul>
     </nav>
 
     <h2><a href="../">‹ article</a></h2>
+
+    <section class="wip">
+        <h2>page in build</h2>
+        <p>this page is currently under development. check back soon.</p>
+    </section>
+
 </body>
 
 </html>
