--- a/index.html
+++ b/index.html
@@ -9,23 +9,24 @@
     <title>Vxncius</title>
 </head>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GDX543KKBB"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-GDX543KKBB');
+</script>
+
 <body>
     <h1>
-        <pre>
-    ▄      ▄     ▄   ▄█▄    ▄█   ▄      ▄▄▄▄▄  
-     █ ▀▄   █     █  █▀ ▀▄  ██    █    █     ▀▄
-█     █  █ ▀  ██   █ █   ▀  ██ █   █ ▄  ▀▀▀▀▄  
- █    █ ▄ █   █ █  █ █▄  ▄▀ ▐█ █   █  ▀▄▄▄▄▀   
-  █  █ █   ▀▄ █  █ █ ▀███▀   ▐ █▄ ▄█           
-   █▐   ▀     █   ██            ▀▀▀            
-   ▐                                          
-        </pre>
+        <img src="assets/logo.png" alt="Vxncius" width="220">
     </h1>
 
     <nav>
         <ul>
             <li><a href="https://github.com/vxncius-dev" target="_blank">› github</a></li>
-            <li><a href="curriculum.pdf" target="_blank">› curriculum</a></li>
+            <li><a href="assets/curriculum.pdf" target="_blank">› curriculum</a></li>
             <li><a href="https://www.tiktok.com/@vxncius_" target="_blank">› tiktok</a></li>
             <li><a href="https://codepen.io/vxncius" target="_blank">› codepen</a></li>
             <li><a href="/all-projects/">› all projects</a></li>
