--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="icon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vxncius</title>
 </head>
@@ -14,67 +17,98 @@
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-
     gtag('config', 'G-GDX543KKBB');
 </script>
 
 <body>
-    <h1>
-        <img src="assets/logo.png" alt="Vxncius" width="220">
-    </h1>
+    <header class="homepage">
+        <nav>
+            <ul>
+                <li>
+                    <a href="https://github.com/vxncius-dev" target="_blank">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.tiktok.com/@vxncius_" target="_blank">
+                        <i class="fa-brands fa-tiktok"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://codepen.io/vxncius" target="_blank">
+                        <i class="fa-brands fa-codepen"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="/all-projects/">
+                        <i class="fa-brands fa-medium"></i>
+                    </a>
+                </li>
+            </ul>
+        </nav>
 
-    <nav>
-        <ul>
-            <li><a href="https://github.com/vxncius-dev" target="_blank">› github</a></li>
-            <li><a href="assets/curriculum.pdf" target="_blank">› curriculum</a></li>
-            <li><a href="https://www.tiktok.com/@vxncius_" target="_blank">› tiktok</a></li>
-            <li><a href="https://codepen.io/vxncius" target="_blank">› codepen</a></li>
-            <li><a href="/all-projects/">› all projects</a></li>
-        </ul>
-    </nav>
+        <span id="title">
+            <p>the</p>
+            <h1>VXNCIUS</h1>
+            <p>portfolio</p>
+        </span>
+    </header>
+    <section class="projects">
+        <h2>My Projects</h2>
+        <a href="/article/" class="project">
+            <article>
+                <h3>Article</h3>
+                <p>Generate academic papers automatically using customizable templates and AI assistance.</p>
+            </article>
+            <img loading="lazy" src="https://i.pinimg.com/736x/ec/b9/f4/ecb9f4a4d27638954e0ef4dfadafd6d6.jpg" alt="" width="100">
+        </a>
 
-    <h2>projects</h2>
-    <section>
-        <article>
-            <h3>
-                <a href="/article/">› article</a>
-            </h3>
-            <p>this tool helps you generate academic articles automatically using templates and ai assistance.</p>
-        </article>
+        <a href="/snapdl/" class="project">
+            <article>
+                <h3>SnapDL</h3>
+                <p>A fast, lightweight downloader supporting multiple formats and platforms. Fully open source.</p>
+            </article>
+            <img loading="lazy" src="https://i.pinimg.com/736x/ec/b9/f4/ecb9f4a4d27638954e0ef4dfadafd6d6.jpg" alt="" width="100">
+        </a>
 
-        <article>
-            <h3>
-                <a href="/snapdl/">› snapdl</a>
-            </h3>
-            <p>a fast and lightweight downloader that supports multiple formats and platforms. fully open source.</p>
-        </article>
+        <a href="/skimmo/" class="project">
+            <article>
+                <h3>Skimmo</h3>
+                <p>A minimal mobile framework that compiles Android apps quickly and efficiently.</p>
+            </article>
+            <img loading="lazy" src="https://i.pinimg.com/736x/ec/b9/f4/ecb9f4a4d27638954e0ef4dfadafd6d6.jpg" alt="" width="100">
+        </a>
 
-        <article>
-            <h3>
-                <a href="/skimmo/">› skimmo</a>
-            </h3>
-            <p>an efficient mobile framework that compiles small-footprint android apps quickly and reliably.</p>
-        </article>
+        <a href="/stocklist/" class="project">
+            <article>
+                <h3>Stocklist</h3>
+                <p>Track expenses and groceries in one smart app with notifications and sharing features.</p>
+            </article>
+            <img loading="lazy" src="https://i.pinimg.com/736x/ec/b9/f4/ecb9f4a4d27638954e0ef4dfadafd6d6.jpg" alt="" width="100">
+        </a>
 
-        <article>
-            <h3>
-                <a href="/stocklist/">› stocklist</a>
-            </h3>
-            <p>track your expenses and grocery items in one smart app with notifications and sharing support.</p>
-        </article>
-
-        <article>
-            <h3>
-                <a href="/playcine/">› playcine</a>
-            </h3>
-            <p>stream live tv and access a wide variety of channels anytime, anywhere with low latency.</p>
-        </article>
+        <a href="/playcine/" class="project">
+            <article>
+                <h3>Playcine</h3>
+                <p>Stream live TV and access a wide range of channels anywhere, with low latency and smooth playback.
+                </p>
+            </article>
+            <img loading="lazy" src="https://i.pinimg.com/736x/ec/b9/f4/ecb9f4a4d27638954e0ef4dfadafd6d6.jpg" alt="" width="100">
+        </a>
     </section>
 
-    <h2>about me</h2>
-    <p>full-stack developer focused on creating fast, scalable solutions. i explore frontend, mobile, and backend,
-        always learning new technologies and seeking challenging projects. passionate about clean code and elegant
-        interfaces.</p>
+    <section>
+        <h2>About Me</h2>
+        <blockquote>
+            Full-stack developer focused on building fast, scalable, and elegant solutions.
+            I explore frontend, mobile, and backend technologies, always learning and pushing limits.
+            Passionate about clean architecture, performance, and intuitive interfaces.
+        </blockquote>
+
+        <footer>
+
+        </footer>
+    </section>
 </body>
 
 <script src="main.js"></script>
