--- a/stocklist/index.html
+++ b/stocklist/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="../icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vxncius - StockList</title>
 </head>
@@ -19,21 +22,40 @@
 </script>
 
 <body>
-    <h1>
-        <img src="../assets/logo.png" alt="Vxncius" width="220">
-    </h1>
+    <header>
+        <span id="title">
+            <p>the</p>
+            <h1>VXNCIUS</h1>
+            <p>portfolio</p>
+        </span>
 
-    <nav>
-        <ul>
-            <li><a href="https://github.com/vxncius-dev" target="_blank">› github</a></li>
-            <li><a href="assets/curriculum.pdf" target="_blank">› curriculum</a></li>
-            <li><a href="https://www.tiktok.com/@vxncius_" target="_blank">› tiktok</a></li>
-            <li><a href="https://codepen.io/vxncius" target="_blank">› codepen</a></li>
-            <li><a href="/all-projects/">› all projects</a></li>
-        </ul>
-    </nav>
+        <nav>
+            <ul>
+                <li>
+                    <a href="https://github.com/vxncius-dev" target="_blank">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.tiktok.com/@vxncius_" target="_blank">
+                        <i class="fa-brands fa-tiktok"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://codepen.io/vxncius" target="_blank">
+                        <i class="fa-brands fa-codepen"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="/all-projects/">
+                        <i class="fa-brands fa-medium"></i>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-    <h2><a href="../">‹ stocklist</a></h2>
+    <h2><a href="../">‹ Stocklist</a></h2>
 
     <section class="wip">
         <h2>page in build</h2>
