--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/icons/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#000000">
+    <meta name="msapplication-navbutton-color" content="#000000">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Vxncius</title>
 </head>
 
@@ -20,39 +20,52 @@
     gtag('config', 'G-GDX543KKBB');
 </script>
 
-<body>
-    <header class="homepage">
+<body class="homepage">
+    <section class="container">
+        <span id="title">
+            <p>hey, I'm</p>
+            <h1>VINICIUS</h1>
+            <p>and this is my portfolio</p>
+        </span>
+        <nav class="local">
+            <img src="assets/icons/location.svg" alt="location" width="20" class="icon">
+            <p>Brazil</p>
+        </nav>
+        <p class="info">
+            <b>Full-stack developer</b> from Brazil, focused on building fast, elegant, and intentional
+            experiences.<br>
+            I create backends and automations in <b>Python</b>, craft mobile apps with <b>Flutter</b>, and shape
+            modern
+            web interfaces by hand.
+            <br>Currently <b>studying Informatics</b> at UFRR, exploring <b>AI</b>, <b>design</b>, and new ways to
+            connect
+            creativity with technology.
+        </p>
         <nav>
             <ul>
                 <li>
                     <a href="https://github.com/vxncius-dev" target="_blank">
-                        <i class="fa-brands fa-github"></i>
+                        <img src="assets/icons/github.svg" alt="GitHub" width="28" class="icon">
                     </a>
                 </li>
                 <li>
                     <a href="https://www.tiktok.com/@vxncius_" target="_blank">
-                        <i class="fa-brands fa-tiktok"></i>
+                        <img src="assets/icons/tiktok.svg" alt="TikTok" width="28" class="icon">
                     </a>
                 </li>
                 <li>
                     <a href="https://codepen.io/vxncius" target="_blank">
-                        <i class="fa-brands fa-codepen"></i>
+                        <img src="assets/icons/codepen.svg" alt="CodePen" width="28" class="icon">
                     </a>
                 </li>
                 <li>
-                    <a href="/all-projects/">
-                        <i class="fa-brands fa-medium"></i>
+                    <a href="https://medium.com/@vxncius" target="_blank">
+                        <img src="assets/icons/medium.svg" alt="Medium" width="28" class="icon">
                     </a>
                 </li>
             </ul>
         </nav>
-
-        <span id="title">
-            <p>the</p>
-            <h1>VXNCIUS</h1>
-            <p>portfolio</p>
-        </span>
-    </header>
+    </section>
     <section class="projects">
         <h2>My Projects</h2>
         <a href="/article/" class="project">
@@ -60,7 +73,6 @@
                 <h3>Article</h3>
                 <p>Generate academic papers automatically using customizable templates and AI assistance.</p>
             </article>
-            <img loading="lazy" src="https://i.pinimg.com/736x/ec/b9/f4/ecb9f4a4d27638954e0ef4dfadafd6d6.jpg" alt="" width="100">
         </a>
 
         <a href="/snapdl/" class="project">
@@ -68,7 +80,6 @@
                 <h3>SnapDL</h3>
                 <p>A fast, lightweight downloader supporting multiple formats and platforms. Fully open source.</p>
             </article>
-            <img loading="lazy" src="https://i.pinimg.com/736x/ec/b9/f4/ecb9f4a4d27638954e0ef4dfadafd6d6.jpg" alt="" width="100">
         </a>
 
         <a href="/skimmo/" class="project">
@@ -76,7 +87,6 @@
                 <h3>Skimmo</h3>
                 <p>A minimal mobile framework that compiles Android apps quickly and efficiently.</p>
             </article>
-            <img loading="lazy" src="https://i.pinimg.com/736x/ec/b9/f4/ecb9f4a4d27638954e0ef4dfadafd6d6.jpg" alt="" width="100">
         </a>
 
         <a href="/stocklist/" class="project">
@@ -84,30 +94,16 @@
                 <h3>Stocklist</h3>
                 <p>Track expenses and groceries in one smart app with notifications and sharing features.</p>
             </article>
-            <img loading="lazy" src="https://i.pinimg.com/736x/ec/b9/f4/ecb9f4a4d27638954e0ef4dfadafd6d6.jpg" alt="" width="100">
         </a>
 
         <a href="/playcine/" class="project">
             <article>
                 <h3>Playcine</h3>
-                <p>Stream live TV and access a wide range of channels anywhere, with low latency and smooth playback.
+                <p>Stream live TV and access a wide range of channels anywhere, with low latency and smooth
+                    playback.
                 </p>
             </article>
-            <img loading="lazy" src="https://i.pinimg.com/736x/ec/b9/f4/ecb9f4a4d27638954e0ef4dfadafd6d6.jpg" alt="" width="100">
         </a>
-    </section>
-
-    <section>
-        <h2>About Me</h2>
-        <blockquote>
-            Full-stack developer focused on building fast, scalable, and elegant solutions.
-            I explore frontend, mobile, and backend technologies, always learning and pushing limits.
-            Passionate about clean architecture, performance, and intuitive interfaces.
-        </blockquote>
-
-        <footer>
-
-        </footer>
     </section>
 </body>
 
