--- a/skimmo/index.html
+++ b/skimmo/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="../icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/icons/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#000000">
+    <meta name="msapplication-navbutton-color" content="#000000">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Vxncius - Skimmo</title>
 </head>
 
@@ -17,45 +17,40 @@
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-
     gtag('config', 'G-GDX543KKBB');
 </script>
 
 <body>
     <header>
-        <span id="title">
-            <p>the</p>
-            <h1>VXNCIUS</h1>
-            <p>portfolio</p>
-        </span>
+        <h2>
+            <a href="../">‹ Skimmo</a>
+        </h2>
 
         <nav>
             <ul>
                 <li>
                     <a href="https://github.com/vxncius-dev" target="_blank">
-                        <i class="fa-brands fa-github"></i>
+                        <img src="../assets/icons/github.svg" alt="GitHub" width="28" class="icon">
                     </a>
                 </li>
                 <li>
                     <a href="https://www.tiktok.com/@vxncius_" target="_blank">
-                        <i class="fa-brands fa-tiktok"></i>
+                        <img src="../assets/icons/tiktok.svg" alt="TikTok" width="28" class="icon">
                     </a>
                 </li>
                 <li>
                     <a href="https://codepen.io/vxncius" target="_blank">
-                        <i class="fa-brands fa-codepen"></i>
+                        <img src="../assets/icons/codepen.svg" alt="CodePen" width="28" class="icon">
                     </a>
                 </li>
                 <li>
-                    <a href="/all-projects/">
-                        <i class="fa-brands fa-medium"></i>
+                    <a href="https://medium.com/@vxncius" target="_blank">
+                        <img src="../assets/icons/medium.svg" alt="Medium" width="28" class="icon">
                     </a>
                 </li>
             </ul>
         </nav>
     </header>
-
-    <h2><a href="../">‹ Skimmo</a></h2>
 
     <section class="wip">
         <h2>page in build</h2>
