--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p>Brazil</p>
         </nav>
         <p class="info">
-            <b>Full-stack developer</b> from Brazil, focused on building fast, elegant, and intentional
+            <b>Full-stack developer</b> focused on building fast, elegant, and intentional
             experiences.<br>
             I create backends and automations in <b>Python</b>, craft mobile apps with <b>Flutter</b>, and shape
             modern
