--- a/playcine/index.html
+++ b/playcine/index.html
@@ -13,12 +13,12 @@
     <title>Vxncius - PlayCine</title>
 </head>
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-GDX543KKBB"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RY9ML04NXR"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-    gtag('config', 'G-GDX543KKBB');
+    gtag('config', 'G-RY9ML04NXR');
 </script>
 
 <body>
